# Oops-All-Collisions

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: headless_main.cpp  simulation_main.cpp
include/: constants.h
include/collision/: BallCollider.h  ColliderFlags.h  ColliderInterface.h
include/data_structures/: BoundingVolumeHierarchy.h  ContainerInterface.h  MultiLevelGrid.h  NaiveLinear.h  SpatialHash.h  SweepAndPrune.h
include/event_loop/: GameLoop.h  GameLoopInterface.h  GameState.h  RaylibGameLoop.h  RendererStates.h  StateMachine.h
include/game_object/base/: AgentABC.h  EntityABC.h  EntityFlags.h  EntityInterface.h  ProjectileABC.h
include/game_object/enemies/: BasicEnemy.h
include/game_object/interfaces/: AgentInterface.h  EntityInterface.h  ProjectileInterface.h
include/mouse_handler/: MouseHandlerInterface.h  NullMouseHandler.h  RaylibMouseFlags.h  RaylibMouseHandler.h
include/random/: NormalDistribution.h
include/renderer/: NullRenderer.h  RaylibRenderer.h  RendererInterface.h  SFMLRenderer.h
include/renderer/draw/: DebugDrawableInterface.h
include/renderer/ui_object/: Text.h
include/renderer/ui_object/text/: NullText.h  RaylibText.h  TextAlignment.h  TextInterface.h  TextLocation.h
include/spatial/: Ball.h  BoundingBox.h  OopsBoundingBox.h  Point.h  RegionInterface.h
include/statistics/: LoggerStatistics.h  NullStatistics.h  StatisticsInterface.h
src/collision/: BallCollider.cpp  ColliderInterface.cpp
src/data_structures/: BoundingVolumeHierarchy.cpp  ContainerInterface.cpp  MultiLevelGrid.cpp  NaiveLinear.cpp  SpatialHash.cpp  SweepAndPrune.cpp
src/event_loop/: GameLoop.cpp  GameLoopInterface.cpp  RaylibGameLoop.cpp  StateMachine.cpp
src/game_object/enemies/: BasicEnemy.cpp
src/mouse_handler/: MouseHandlerInterface.cpp  RaylibMouseHandler.cpp
src/renderer/: RaylibRenderer.cpp  RendererInterface.cpp  SFMLRenderer.cpp
src/renderer/ui_object/text/: RaylibText.cpp
src/spatial/: Ball.cpp  BoundingBox.cpp  OopsBoundingBox.cpp  Point.cpp
src/statistics/: LoggerStatistics.cpp  NullStatistics.cpp
tests/: CMakeLists.txt  test_spatial.cpp
